environments/dev/namespace/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-dev
  annotations:
    field.cattle.io/projectId: local:p-xqfb9
  labels:
    app.kubernetes.io/part-of: platform-demo
    field.cattle.io/projectId: p-xqfb9
    platform.verda-demo.io/environment: dev
    platform.verda-demo.io/owner: platform-team
    platform.verda-demo.io/topology: platform-management-cluster
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
